FreedomSanboxAntDeploy/src/objects/Temp_Purchase_Report__c.object
<CustomObject>
    <fields>
        <fullName>AR_No__c</fullName>
        <label>AR No.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Absolute_Ret__c</fullName>
        <label>Absolute Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Ret__c</fullName>
        <label>Annualized Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Debt: Floating Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Liquid Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Monthly Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity : Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Diversified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dividend_Reinvested__c</fullName>
        <label>Dividend Reinvested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dividend__c</fullName>
        <label>Dividend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Folio_Number__c</fullName>
        <label>Folio Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gain__c</fullName>
        <label>Net Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAV_p__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <label>Relationship Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Haren Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunitha V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinita Somaiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sameer Kapoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamal Shroff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STP_Switch__c</fullName>
        <label>STP/ Switch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Units__c</fullName>
        <label>Sales Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheme_Scrip_Name__c</fullName>
        <label>Scheme Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>NOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Units_Quanitity__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Temp Purchase Report</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Purchase Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp_Purchase_Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>